$Id$

2008-02-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c: Improved get_source_ip function: close socket descriptor
	  after use, and give better error message if the interface has no
	  IP address.

	* tcp-scan.c: Added new --port (-p) option to replace the now
	  depreciated --data (-D) option.

	* tcp-scan.c: Modified usage() so that it can output either brief or
	  detailed help output depending on a new "detailed" argument.  Now,
	  detailed output, including information on the available options, is
	  only displayed when ike-scan is run with the --help option.  For
	  error conditions such as incorrect options, it only produces brief
	  output.

	* tcp-scan.c: Added --servicefile2 (-E) option to allow the TCP service
	  filename to be specified.

	* configure.ac: Increment version number to 1.15.

2008-02-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac, tcp-scan.h: Add Posix regular expression support with
	  header file regex.h.

	* configure.ac: Increment version number to 1.14.

	* tcp-scan.c: Improved algorithm to create port name map from
	  services file.  This new algorithm uses Posix regex functions.

	* tcp-scan-services: Improved port list in services file.

2007-12-31 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c: Use mersenne twister PRNG to generate random values
	  for seq_no, ack_no and source_port rather than using an md5 hash.

	* md5.c, md5.h: Source files removed as they are no longer needed.

	* tcp-scan.h: Removed include for md5.h.

	* tcp-scan-services: New TCP services file.

	* tcp-scan.c: Use TCP service file in DATADIR rather than using hard-
	  coded absolute path.

	* tcp-scan.1: New manpage file.

2007-12-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* Removed rawip-scan-engine.c and rawip-scan-engine.h.  Code moved to
          tcp-scan.c and definitions to tcp-scan.h

	* New source file: utils.c, containing utility functions.

	* Added mt19937ar.c: mersenne twister PRNG.