@@ -1,5 +1,12 @@
 $Id$
 
+2008-07-11 Roy Hills <Roy.Hills@nta-monitor.com>
+
+	* tcp-scan.c: Removed reference to RMIF environment variable.
+	  tcp-scan now uses the value specified with --interface, or
+	  if that is not specified, picks an interface with
+	  pcap_lookupdev().
+
 2008-02-04 Roy Hills <Roy.Hills@nta-monitor.com>
 
 	* tcp-scan.c: Improved get_source_ip function: close socket descriptor
